--- a/10-08-24.md
+++ b/10-08-24.md
@@ -1,11 +1,143 @@
 ### HIST 303 - Japan's Modern Revolution - Fall 2024
 
 [//]: <> (use `gqap` to force wrap text)
+[//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 12 - October 8, 2024
+# Lecture 12 - October 8, 2024 - Dismantling Feudalism
 
-##
+## Lecture Outline
 
-###
+### 1. What is feudalism?
 
--
+- Alive and well in the Japanese context, but there are different ways to think about it/Japan in
+  this period
+- Some possible definitions
+  - Marxian definition
+    - Samurai (military class that governs that uses violence or the threat of violence to control
+      the peasants and take extra food) v. peasants (that is growing food)
+    - different relationships between different social classes and the ways/means of productions
+  - Cultural definition
+    - feudalism in terms of social relationships and the form that they take
+    - defined by idea of vassalage
+    - a samurai and his vassal(s), where the vassal has pledge loyalty/his life to the samurai in
+      exhcnage for sustenance
+    - also defined many inter-samurai relationships, e.g. between a samurai and his lord/daimyo
+    - idea that all people are created equal is not central to this period, rather, everybody has
+      their own role to play and someone needs to tell other people what to do
+  - Political definition (_gunken_ v. _hōken_)
+    - fragmented and uneven authority
+    - feudalism in terms of the relatonships between the different lords
+    - feudal society is one where the power/authority is decentralized, where is rule
+      (semi-)independently
+    - by this definition, Japan was most feudal during the warring states period
+    - 3 greate unifies united Japan into "stable" kingdom, where even then, there are many, many
+      territories
+    - some historians use the term "centralized feudalism" to describe the Tokugawa period, but this
+      is a contradiction in terms
+    - In the east asian political/philosophical tradition, there is a divide between _gunken_ and
+      _hoken_ (centralized v. decentralized rule)
+    - western scholars chose _hoken_ to describe Japanese feudal society
+    - picking which tradition was better was a primary focus in the early years of the Meiji
+      restoration
+    - That is why the ancient council of state (daijo-kan) and other ancient institutions were
+      revived
+    - backed by the idea tha the emperor should be in change of everything
+    - issue was that some of the new leaders still had loyalty to their home domains, and were slow
+      to essentially take away their domains' power
+
+### 2.. Abolition of the Domains
+
+- State Structures and the ‘Restoration of Imperial Rule’
+- In 1868, all the daimyo pledge loyalty to the emperor
+- But in 1869, the daimyo of the southwestern domains spontaneously volunteer to give up their
+  domains back to the ownership of the emperor (as a sign of loyalty). but at this point, just a show,
+  because the daimyos are told to "govern" those domains as they had before
+- In August 1869, doesnt seem like much will change. but over the next year, the government is faced
+  with pressure to do something about the domains
+- Yamagata Aritomo (1838-1922) is the first to propose the abolition of the domains
+  - samurai from Choshu (born into the lowest ranks) but helps spearhead the militia groups that
+    recruit from all members of society
+  - one of 100 other men from across the country to serve as "court appointees" (_Choshi_), a
+    proto-parliament
+  - had very little reason to support the status-quo, as they had not been brought into
+    priviledge
+  - as they spent more time working for the regime, their loyalty shifted from their home domains
+    to the emperor, i.e. the imperial cause is the national cause
+  - suggestion for the complete abolition of the old domains comes from here
+- The financial difficulties of the domains
+  - public expenditures were increasing, but the domains were not able to increase their income and
+    thus could not modernized their militaries
+  - domains then begged the emperor/the central regime
+    - government would continue paying the daimyo and samurai retainers were promised a stipend
+  - e.g. domain of Yoshi
+  - some domains were too proud to do this, so they went to other domains to ask to be absorbed
+- The credibility of the new government
+  - Kido and Okubo recognized that the new government was likely to be seen as an extention of the
+    choshu and satsuma domains
+  - to address this, they needed to show that the new government was not just a continuation of the
+    old regime
+  - in 1871, the proposal of the lower ranking court appointees was accepted and the domains were
+    abolished
+- From domains to prefectures (1871)
+  - 302 prefectures were created to take over the 300+ domains, but over the next few years are
+    gradually reduced to 43
+  - growing sense of national consciousness and men working across political boundaries that existed
+    previously was important
+  - The spread of elected assemblies
+    - Meiji government focused on making sure the new prefectural governments, who were originally
+      run by the previous daimyo, were relatively small
+      (reduce cost + increase efficiency)
+    - gradually replaced by professional bureaucrats, appointed by the central government, and
+      daimyo were invited + given formal titles
+    - small size of prefectual governments mean that the central government must look elsewhere for
+      ideas to govern
+      - pulled from non-samurai, non-daimyo, non-court nobles
+      - but they started to get upset that they were not represented/included in the government
+- by 1875, there are already 7 new prefectures with elected officials + even more with a combination
+  of elected and appointed officials
+- Okubo originally wanted to encourange the elections of local prefectural officials, but not b/c he
+  wanted to give people a voice, but in order to "keep the local officials busy so the central
+  government can rule" and to also have a scapegoat for discontent
+- Samurai were retitled as gentry, continue to receive smaller stipends and enjoy legal priviledges
+  - but by beginning of Meiji restoration, it was clear that the samurai were not going to be the
+    ones really fighting, as military might could not be built on the basis of heriditary priviledge
+
+### 3. Introduction of Conscription
+
+- Yamagata Aritomo was a strong advocate of western-style conscription
+  - strong echos of Charter Oath in abolishing the evil practices of the past
+  - samurai were described as a leech class
+  - needed to return to the ancient system where everyone could be called to serve the emperor
+- Ending the samurai monopoly on military service
+  - Popular resistance and limitations
+    - some peasants were not happy about this, as some say it as a "blood tax" and it was inspired
+      by the West
+    - in 1870s, less than 3% of viable population was conscripted, with only 43,000 in its combined
+      armed forced (for reference, Germany has more than a million soldiers)
+  - Changing appearances (Ending the warrior “look”)
+    - embraces western style uniforms and hair
+    - also got rid of the practice of carrying two swords
+
+### 4. A New Taxation System
+
+- implementation of a new taxation system
+- Mutsu Munemitsu (1844-97) comes up with a plan (adopted in 1872) to end the system of collected in
+  rice in favor of collecting them in cash, and a national survey of the value of land and official
+  recognition of land ownership
+- Political concerns about regional inequalities
+  - Fiscal concerns
+  - Mutsu Munemitsu and the new land tax
+  - Taxes in cash not kind
+  - Problems with the new system
+
+### Key Terms
+
+- Feudalism
+- _gunken_ (centralized system of rule)
+- _hōken_ (decentralized system of rule; feudal)
+- Ritsuryō system (from late 7th century)
+- Daijōkan (= 7th century Daijōkan)
+- _Chōshi_ = “court appointees”
+- YAMAGATA Aritomo (1838–1922)
+- Domains _(han)_ - Prefectures (_ken_)
+- MUTSU Munemitsu (1844–97)
