--- a/10-08-24.md
+++ b/10-08-24.md
@@ -124,6 +124,10 @@
 - Mutsu Munemitsu (1844-97) comes up with a plan (adopted in 1872) to end the system of collected in
   rice in favor of collecting them in cash, and a national survey of the value of land and official
   recognition of land ownership
+- fully established by 1876 and places the government in a good financial footing
+- but now, it places the burden on selling the rice onto the farmers, who now found themselves under
+  a lot of financial pressure
+  - helps give rise to bottom-up push to popular representation in government
 - Political concerns about regional inequalities
   - Fiscal concerns
   - Mutsu Munemitsu and the new land tax
