--- a/10-03-24.md
+++ b/10-03-24.md
@@ -90,7 +90,7 @@
 
 - Popular views of the Emperor in 1868
   - irreverence towards the emperor was wide spread
-  -
+  - but arrival in Edo made it seem like there was outward deference
 
 ## Terms
 
