--- a/10-24-24.md
+++ b/10-24-24.md
@@ -3,12 +3,127 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 14 - October 24, 2024 -
+# Lecture 14 - October 24, 2024 - Civilization and Enlightenment: Western Studies and the Iwakura Mission
 
 ## Lecture Outline
 
-###
+#### 1. Studying the West
 
-#### 1.
+- Dutch studies had been an establish area of scholarship, so that is where many interested in the
+  studying the West turned
+- The case of FUKUZAWA Yukichi
+  - on 10,000 yen note for a long time.
+  - household name; often pointed to as a personification of the best aspects of the Meiji period
+  - born into a low-ranking samurai family in Nakatsu
+  - 18 years old when Commodore Perry arrived
+  - his family decides for him to go to Nagasaki to study Dutch and learn about Western gunnery
+  - starts learning the Western alphabet, and then starts learning English, but after ~year, he
+    decides to move to Osaka
+    - why Osaka? Ogata Koan, a physician, who had been studying Western medicine. This lead Ogata to
+      establish a school in Osaka, called the Tekijuku Academy, which Fukuzawa attends
+      - relatively simple building, with one large room and only one Dutch-Japanese Dictionary that
+        they were constantly fighting over
+      - simply being at the Tekijuku was more than enough for making you a target for an attack by
+        the expel the barbarian type samurai
+      - but his knowledge + ambition, he gets an order from his home domain (Nakatsu) to go to Edo
+        to establish a new school to teach samurai from Nakatsu about western science
+      - arrivs in Edo during the Keio era
+      - writes in his diary that no one understood what he was saying in Dutch and that he was not
+        able to read the various signboards. efforts to learn Dutch had gone for nothing
+  - eventually established Keio Univesity
+  - decides to learn English, and in 1860s takes a voyage to the US to help the bakufu ratify the
+    Harris treaty
+  - gets himself as far of San Francisco
+  - in 1862, he goes to the west again, this time to America and Europe, visiting France, England,
+    the Netherlands, Germany, Russia, and Portugal
+  - takes copious notes on everything he sees, eventually writing a book called Seiyo jijo,
+    Conditions in the West (1866), talking about literally everything he saw. sold around 250,000
+    copies, making it the most widely read book in the East-West period
+  - continues to write, teaching many of the leading figures of the Meiji period and establishing
+    many banks, newspapers, and other institutions
+- The case of MORI Arinori (1847-1889)
+  - born in Satsuma and went to study in Britain during the final years of the restoration period
+  - returns to Japan and establishes in 1873 the Meiji 6 society (Meirokusha), which was a group of
+    debating society that was dedicated to the study of Western thought
+    - published a journal called Meiroku zasshi about their debates, giving a sense of how people
+      were grappling with the ideas of the West
+    - first place where people called for the abolition of judicial torture, etc, and also if Japan
+      should establish a popularly elected parliament
+  - many of the people involved in the Meirokusha were actually people backed by the Bakugu (when it
+    was in power)/on the losing side of the transition to the Meiji government
+- The case of YAMAKAWA Kenjirō—Yale’s first Japanese graduate
+  - from Aizu domain (remember how it was singled out from the rest of the domains by Satsuma and
+    Choshu)
+  - goes to America to study, (Yale in 1871, graduated Yale College (SSS) in 1875 in Physics) and
+    goes back to University and becomes an important professor and established many important
+    universities and becomes an important advisor to the emperor
+
+#### 2. Treaty Revision and the Iwakura Mission
+
+- From “Revere the Emperor, Expel the Barbarian” to “Review the Treaties” (in the 1870s and 1880s)
+  - Idea about learning about western military strength is important, but increasingly, the Meiji
+    leaders were not worried about a western invasion, but start to realize that the biggest threat
+    was permanent relagation to a second-class nation state
+  - all these heirarchies of domains/people
+  - Japanese leaders recognize that one of the things that limits them to this second-class status is
+    the "unequal treaties"
+    - signaled that Japan was at best a semi-civilized country
+  - it was a critical mission to revise these unequal treaties
+- 1869 - sends a letter to the various treaty members to renegotiate the treaties
+- 1871 IWAKURA Tomomi leads a mission of leaders to the West
+  - both Okubo Toshimichi and Kido Koin were part of the mission (including 50 others)
+  - away for 18 months
+  - intent was to show how civilized the Japanese people were and that were worthy of respect
+  - wear all Western clothes; eat Western food; etc.
+- SAIGŌ Takamori and the “caretaker government”
+  - Saigo does not go on this mission and is left in charge of the government while everyone else is
+    away
+  - agreement is made that no new policies/decisions will be made while the mission is away
+- Women and the Iwakura Mission
+  - sent a group of Japanese girls abroad to study (intended to impress the West)
+  - YAMAKAWA Sutematsu (sister of Yamakawa Kenjiro) comes to New Haven, CT,
+  - pastor of Central Church on the green, Leonard Bacon, and his daughter, Alice Mabel Bacon (1858-1919), take her
+    in and teach her English
+    - become lifelong friends and goes back to Japan with them and teaches in a Japanese school
+  - Nagai Shige and Sutematsu Yamakawa study at Vassar College, and then go back to Japan where
+    Sutematsu is married off to a high-ranking samurai
+  - TSUDA Ume (1864-1929) goes to America and studies at Bryn Mawr College, and then goes back to
+    Japan and refuses to marry, devoting herself to founding a college for women, Tsuda College
+- Ultimately, the mission was a failure, as many countries were not interested in revising the
+  treaties
+
+#### 3. The era of “Civilization and Enlightenment”
+
+- industry was often thought as creating unnecessary luxury, but during their travels, they see that
+  in order to create a powerful military, you needed to have a powerful industry and needed to
+  embrace commerce
+- you can actually create a school system to provide universal education for both boys and girls
+- also come to realize that the immediate thread posed by the west was not as acute as they thought,
+  and had time for long range planning and careful management
+- increasingly embrace the idea of gradualism (gradual, thoguhtful change)
+- becomes convinced that the west must become the model
+- when they returned, they found that the government in a different state, leading to a split in the
+  government after their return
 
 ### Key Terms
+
+- **FUKUZAWA Yukichi** (1835–98)
+- **Tekijuku Academy**
+- **OGATA Kōan** (1810–63)
+- **MORI Arinori** (1847–1889)
+- **Meiji 6 Society (Meirokusha)**
+
+- **YAMAKAWA Kenjirō** (1854–1931)
+
+  - Unequal Treaties
+  - Treaty Revision
+  - Iwakura Mission
+
+- **YAMAKAWA Sutematsu** (1860–1919)
+- **Alice Mabel BACON** (1858–1918)
+- **NAGAI Shige** (1862–1928)
+- **TSUDA Ume** (1864–1929)
+
+- **Tsuda College** (now Tsuda University)
+- **Gradualism (Zenshin shugi)**
+- “**Civilization and Enlightenment**” (Bunmei kaika)
