--- a/10-29-24.md
+++ b/10-29-24.md
@@ -3,12 +3,149 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 15 - October 29, 2024 -
+# Lecture 15 - October 29, 2024 - "Chastise Korea!" - The Split of 1873 and its Aftermath
 
 ## Lecture Outline
 
-###
+#### 1. **Relations with Korea after the Restoration**
 
-#### 1.
+- recall the bakufu maintaining diplomatic relationship with Korea (Korean Embassy in Edo)
 
-### Key Terms
+  - but not direct; mediated through Tsushima domain
+  - Tsushima domain and the problem of the term "Emperor"
+  - when the bakufu fell, Korea was attempted to be notified of the emperor's restoration by Tsushima domain, but
+    the Tsushima domain don't tell the Korean king/refuse to accept it
+    - were against the use of the chinese word emperor for description of the emperor, as emperor >
+      king, and traditionally, only China had an emperor, and the surounding countries had kings
+    - very different from situation during the Tokugawa period
+    - Korea used word Taikun for the shogun (prince), and the bakufu used the word king for the Korean king
+  - in the late Tokugawa period, many writers started talking about Korea in negative terms
+    - nativist scholars pointed to passages that interpreted Korea as a previous colony of the
+      Japanese emperor
+    - leads members of the Mito school and some nativists to argue that Japan should once again
+      conquer Korea
+
+- Early plans for aggression
+  - Some leaders, like daimyo of Satsuma, were worried about Russia and valued Korea as a buffer
+    from the Russians
+  - from the perspective of the Japanese leaders, Korea's reluctance to acknowledge the emperor's
+    restoration was a sign of disrespect
+  - mission sent to investigate what would be required to conquer Korea
+    - nothing comes of this though, as the Meiji leaders choose to focus on negotiating a new
+      relationship with the Qing dynasty in China
+      - signing of a Western-style treaty with China
+      - first time two east asian countries agree to see themselves as equals
+  - thought this would help Korea recognize the emperor's restoration
+    - but Korea doesn't see it that way
+    - declares Japan as a rogue state/renegade country (sign in Busan)
+
+#### 2. **The "caretaker" government**
+
+- Remember many of the great heros/leaders of the Meiji Restoration, leading Saigo Takamori in
+  charge of the government
+- some see it as a way to make a name for themselves
+- Opportunity and ambition: The case of Etō Shimpei
+  - Saga domain
+  - a loyalist/activist of the Meiji restoration
+  - eventually rises to become First Minister of Justice in 1872
+  - remember, the west refused to allowed their citizens/white men to be prosecuted by Japanese
+    government until Japan had a "fair", western-style legal system
+  - finds himself in a critically important role, creating an independent judiciary, and invites
+    western experts to advise the government on how to go about creating western-style criminal and
+    civil codes
+  - builds up his own power base, and starts to make a name for himself, ultimately being promoted
+    to "councilor of state" (daijōkan) (highest role that could be given in the government)
+- Other reforms
+  - Saigo embraces he need for a modern banking system
+- Responding to the Korea problem
+  - when faced with the sign/situation in Korea where Japan is labeled as a rogue government
+  - One of the people that takes the leader is Itagaki Taisuke (1837-1919)
+    - important leader from Tosa, being an important military leader in the Meiji restoration
+    - proponent of "Chastise Korea" (Seikanron)
+    - wins over considerable support from the caretaker government
+  - Itagaki Taisuke v. Saigo Takamori
+    - but Saigo is more cautious and convinces the government to take a more diplomatic
+      approach, sending Saigo himself as a high-ranking envoy
+    - but decide to wait until the Iwakura mission returns before sending Saigo
+      - return by the Fall of 1873
+
+#### 3. **Return of the Iwakura Mission and the Split of 1873**
+
+- Caretaker government v. mission members
+  - Ikakura, Okubo, and Kido are all opposed to sending Saigo, with the traditional view being
+    that Saigo's goal was not to negotiate in good faith, but to provoke the Koreans and get himself
+    killed, so that there would be a clear reason to attack
+    - did not want Japan to risk itself from any risky overseas adventures
+    - wanted to focus on domestic reforms
+- Okubu and Kido in the past, had been just as willing to use military force against Korea
+  - Kido was previously very hawkish against Korea
+  - Okubu wanted to send gunship to Korea to force them to sign a treaty, just like the US did to
+    Japan in Edo (Commodore Perry)
+- Different interpretations of "the split"
+  - but in the end, the major difference between these groups was not whether or not to attack
+    Korea, but when
+  - lead to a major split in the Meiji leadership
+  - caretakers follow Saigo in resigning from the government in protest of the mission members
+    refusing to attack Korea
+- paved the way for Okubo to truly dominate policy
+  - Kido Koin suffered from bad health and was unable to engage in the government
+- many people lose faith in the government, perceiving Okubo's actions as westernizing for the sake
+  of westernizing, and not for the sake of Japan/samurai
+  - Meiji regime starts to be accused of Tyranny and despotism
+
+#### 4. **The aftermath**
+
+- Rising tide of samurai discontent
+
+  - Etō and the Saga rebellion 1874
+    - Saga/Hizen domain (southwest of the main islands) was important during the Meiji Restoration
+    - home domain of Eto Shimpei
+    - Eto is soon convinced by the rebels to sign on, but is cast as a traitor to the emperor
+    - the rebellion is quickly put down, and Eto is executed/his head is put on public display
+  - Saigo decides to establish system of schools in Satsuma
+    - but in 1876, the government launches series of new policies that samurai groups see as
+      betrayal
+      - e.g. banning of samurai swords from being carried in public
+      - phase out hereditary stipends for samurai
+  - More rebellions (Kumamoto, Akitsuki, Hagi 1876)
+    - all these are in the southwest of Japan (heartland of the restoration)
+    - all were put down easily
+  - Saigo and the Satsuma rebellion 1877
+    - rebellion in Kagoshima, capital of Satsuma
+    - "War of the Southwest"
+    - triggered when the Meiji government moves the arsenal of weapons out of Kagoshima to another
+      city. samurai saw this as a precursor to the government disarming them
+    - many people form Saigo's school and spread rumors that Okubo was sending assassins to kill
+      Saigo
+    - convinces Saigo to take leadership of this rebellion (had more than 30,000 highly motivated
+      soldiers)
+    - government forces were able to defeat Saigo's forces, and Saigo is killed on the battlefield,
+      marking the end of the Satsuma rebellion
+    - Saigo's death quickly takes on hero status, seen as a martyr for the samurai cause
+
+- but people now accept that armed rebellion is not the way to cause change (b/c Saigo was such a
+  strong leader/commander)
+- Another approach - more of an embrace of a need for a popularly elected assembly/parliament and
+  political parties
+  - In 1881, Itagaki founds Japan's liberal party (Jiyū-tō)
+  - Itagaki Taisuke and the "Movement for Freedom and Popular Rights"
+    - went around Japan trying to convince people for the need of a parliament
+- none of the great leaders of the Meiji Restoration saw this parliament: the death of Ōkubo 1878
+  - was attacked by samurai and killed in Tokyo
+  - attackers called Okubo a traitor to the samurai/traditional values embodied by Saigo
+
+## Key terms
+
+- "Chastise Korea" (Seikanron)
+- Yi dynasty - Korea
+- Qing dynasty - China
+- Tsushima domain
+- "Taikun" v. Emperor
+- Satsuma Rebellion (War of the South-West; Seinan War)
+- Movement for Freedom and Popular Rights (_jiyū minken undō_)
+- Liberal Party (_jiyū-tō_)
+- Petition for the Creation of a Popularly Elected Assembly 1874
+- Saigō Takamori (1827–77) [Satsuma domain]
+- Ōkubo Toshimichi (1830–78) [Satsuma domain]
+- Etō Shimpei (1834–74) [Saga (also known as Hizen) domain]
+- Itagaki Taisuke (1837–1919) [Tosa domain]
