--- a/10-31-24.md
+++ b/10-31-24.md
@@ -3,12 +3,162 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 16 - October 31, 2024 -
+# Lecture 16 - October 31, 2024 - Political Opposition and Economic “Shock Therapy”
 
 ## Lecture Outline
 
-###
+#### 1. The Satsuma Rebellion and the economy
 
-#### 1.
+- Japan as an economic backwater?
+  - The Japan Gazaette, 1882: called Japanese people lazy and unproductive. called out banking
+    systemas inefficient and corrupt
+  - remember, Japan was mainly agraian up until this point
+  - most manufacturing was done in the cottage industry, like sake brewing, etc
+  - successful implementation of land tax reform to raise money (in cash), but despite of that, the Meiji government's
+    finances was a mess (due to Satsuma rebellion)
+    - takes entire conscripted army, police force, and 10,000 recruits by Saigo to put this down
+  - government's initial response was to print more money
+    - the issued bank notes were inconvertable (i.e. the value of the money was not guaranteed)
+    - the amount of gold/silver that the government owned was only 6% of the amount of money in
+      circulation, leading to serious inflation
+      - price of rice doubled in just 2 years, and prices across the board increased by ~64%
+  - minister of finance, Okuma Shigenobu (1838-1922), creates a plan to fix the problem in 1880
+    - thinks solution is to borrow money, specifically from the western powers (Britain)
+    - used borrowed money to buy up inconvertable notes and replace the with modern, convertible
+      notes, guaranteed by the central bank
+    - but this plan was never implemented, as he became embroiled in a controversy
+      - recall Okubo Toshimichi's assassination in 1878 and the other leaders' deaths, leaving a
+        power vacuum
+        - this was filled by Okuma, who appoints his followers to key positions within the
+          bureaucracy
+      - but the issue was that Okubo was from Saga (not Choshu), and is not trusted by the next
+        generation of leaders from Satsuma and Choshu
+  - recall Itagaki Taisuke (Tosa) (1837-1919) and his group, who were calling for a parliament
 
-### Key Terms
+#### 2. The rise of the Movement for Freedom and Popular Rights
+
+- Itagaki Taisuke and the growth of a popular opposition movement
+  - significant interest in political reform
+- Women and the movement
+  - Kusonose Kita (1833-1920), from Tosa, and Kishida Toshiko (1863-1901), from Kyoto,
+  - Kusonose's letter to the authorities, 1878
+    - becomes known as Old Lady Rice within the Tosa domain
+  - Kishida Toshiko was selected to serve as a lady in waiting to the empress
+    - doesnt stay long, but her time there gives her respectability/authority in public
+  - Kishida is asked to speak at one of the rallies originally to draw in more young men, but is
+    revealed to be a powerful speaker, arguing that the true measure of any civilization was its
+    treatment of women and the differences in the treatment of sexes
+    - showed that Japan had an opportunity to show the world that it was a civilized (even the most
+      civilizted) nation by giving women more rights than they had in the west
+- Government reactions to the call for a parliament
+  - petition with 100,000 signatures
+  - Ōkuma and the English model
+    - very enthusiastic about reform along an English model (i.e. Japan was an emperor, British
+      have a monarch; wanted a constitutional monarchy)
+  - Itō Hirobumi (1841-1909) and the German model
+    - Ito was a core participant of the Iwakura Mission
+    - he is from Choshu and pushes the idea that Okuma is dangerous
+    - valued the Prussian/German model
+- 1881: Another political split
+  - Okuma and his followers were branded as liberals and ousted from the government
+  - afterwards, Satsuma and Choshu increasingly dominate the government
+  - Okuma and his followes now turned to the people to discuss this increased despotism/grasp on
+    power of the Sat-Cho clique
+  - many came to believe that popular representation was an essential need
+- emperor issues decree that a parliament would be establish in 10 years time (deadline 1890)
+  - Okuma forms the Progressive Party (_kaishin-tō_) in 1882
+  - the Sat-Cho oligarches formed the conservatives (they were still in power)
+
+#### 3. The Matsukata Deflation
+
+- Matsukata Masayoshi as finance minister
+  - disciple of Okubo Toshimichi and is quite a controversial figure
+  - remembered as a far-sighted statesman who paved the way for Japan’s industrialization
+  - but others view him as their arch-villian
+  - decides to radically reduce spending, and to balance the books, raises taxes
+  - then gradually buys up the paper money and replaces it with convertible notes, issued by a new
+    central bank, the Bank of Japan
+    - the first governor of the Bank of Japan, Yoshihara Shigetoshi, was the first Japanese student
+      to study at Yale (in 1869), but doesn't finish his degree as he is very smart and called back
+      to Japan after only a year
+  - ultimately succeed in stopping the inflation, but even lead to the sharpest period of deflation
+    in Japanese history
+- Retrenchment and deflation
+  - drops from 10 yen in 1881 to 5 yen in 1884
+  - many prices dropped to pre-Satsuma rebellion prices
+  - but up and down fluctuations in the economy was very tough on farmers (b/c their incomes are
+    essentially halved), leading a major surge in rural poverty and indebtedness
+  - about 10% of all land in the country was sold off
+  - government also moved to prosecute thousands of people for not paying their taxes
+  - significant rise in the number of share-croppers (tenant farmers) and landless laborers
+- Military expenditure and new taxes
+  - government also starts planning/spending on their military to account for a future conflict
+  - military expenditure was 1/3 of the national budget by 1887
+  - introduces new taxes on alcohol, soy sauce, etc to pay for this
+- Political consequences
+  - leads to series of incidents
+  - Fukushima Incident in 1882
+    - governor was a man from Satsuma (outsider) and had the goal to build a new highway with the
+      labor of the local population
+    - locals dont like this, and lead to public protests, lead by the Liberal Party
+    - governor responds with strong arm tactics, taking land, arresting liberal party leaders, etc
+    - people respond by attacking the local police headquarters
+  - Kaba-san Incident in 1884
+    - liberal party members plan to assassinate the governor
+    - plan is discovered and the leaders are executed, imprisoned
+  - Gunma Incident in 1884
+    - liberal party members tried to assassinate another group of leaders at a railway line opening
+    - people involved in the attack are rounded up
+  - seeing the lack of control over the party, Itagaki decides to disband the party
+  - Chiichibu Incident in 1884
+    - area where people are very badly affected by deflation
+    - form various political parties and present demands, asking for relief from the government
+    - At the end of 1884, the government sends army to supress the locals from seizing the
+      town/their march to Tokyo, crushing the protests and sending many to prison/~10 to death
+- Significance for the Movement for Freedom and Popular Rights
+  - Matsukata's determination to ignore the people did pave the way for Japan's first industrial
+    revolution in the 1890s
+  - village leaders started to question their support of the movement
+
+## Key Terms
+
+- Ōkuma Shigenobu (1838-1922) — Saga
+- Itagaki Taisuke (1837-1919) — Tosa
+- Kusonose Kita (1833-1920)
+- Kishida Toshiko (1863-1901)
+- Itō Hirobumi (1841-1909) — Chōshū
+- Liberal Party (_jiyū-tō_) (Founded by Itagaki Taisuke and his group)
+- Progressive Party (_kaishin-tō_) (Founded by Ōkuma Shigenobu and his group)
+- Matsukata Masayoshi (1835-1924) — Satsuma
+- Yoshihara Shigetoshi (1845-87)
+
+- Fukushima Incident 1882
+- Kaba-san Incident 1884
+- Gunma Incident 1884
+- Chichibu Incident 1884
+
+- Poor People’s Party (_konmin-tō_)
+- Debtor’s Party (_shakkin-tō_)
+
+## References
+
+Kusonose Kita’s Letter to the Authorities, 1878
+
+“We women who are heads of households must respond to the demands of the government just as other
+ordinary heads of households, but because we are women, we do not enjoy equal rights. We have the
+right neither to vote for district assembly representative nor to act as legal guarantors in matters
+of property, even though we hold legal instruments for that purpose. This is an enormous
+infringement of our rights...!
+
+“If it is reasonable to assume that rights and duties go together, then we should make that widely
+held assumption that they are in fact corresponding responsibilities a reality... I do not have the
+right to vote. I do not have the right to act as guarantor. My rights, compared with those of male
+heads of households, are totally ignored. Most reprehensible of all, the only equality I share with
+men who are heads of their households is the onerous duty of paying taxes...
+
+“Officials to whom I complained tell me that men have greater rights than women because they bear
+the additional burden of military service... but my protest stands, since it is well known that men
+are routinely excused from military service precisely because they are heads of their households!”
+
+From: Sharon Sievers, _Flowers in Salt: The Beginnings of Feminist Consciousness in Modern Japan_
+(Stanford: Stanford University Press, 1983), p.29.
